src/test/deca/syntax/valid/avecObjet/classAvecNull.deca
class A {
    int a;
}
{
    A class1 = new A();
    if(class1 != null){
        return 3;
    }
}