src/test/deca/syntax/invalid/avecObjet/wrongClassCall.deca
class A {
    int a;
    public A(){
        a = 1;
    }
}
{
    A anass = new A;
}